# cocktail_culinary_pipeline

./: .pydocstyle  README.md  pyproject.toml  requirements_dev.txt
etl/: cocktail_dto.py  cocktaildb_api.py  db.py  etl_exceptions.py  extract.py  file_utils.py  load.py  start.py  transform.py  util.py
input/: cocktail_menu.json
tests/: test_cocktail_dto.py  test_cocktaildb_api.py  test_db.py  test_etl_exception.py  test_extract.py  test_file_utils.py  test_load.py  test_transform.py  test_util.py
