[project]
name = "Cocktail menu ETL script."
version = "0.1.0"
description = "Extract, transform and load party menu options."
authors = [
  "hari.gudla@outlook.com"
]
python = "^3.10"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
remove_redundant_aliases = true
supported_extensions = 'py'
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true

[tool.black]
line-length = 79
target_version = ['py38']